fix horizontal scrolling issue but now scrollbar is visible

--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@700&display=swap");
+
+/* html {
+  -ms-overflow-style: none;
+  scrollbar-width: 0;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+} */
+
+html, body {
+  /* overflow-x: hidden creates issue w/ sticky header when scrolling to the bottom  */
+  overflow-x: clip;
+  max-width: 100%;
+  /* height: 100%; */
+}
+
 body {
   margin: 0;
   line-height: normal;
+  background: var(--page-background) !important;
 }
+
 :root {
   /* fonts */
   --title-lexend-large: "Lexend Exa";
